Molecular verification for metal, neutral, organic and acid commpounds. Should show that issues https://github.com/rivm-syso/SBoo/issues/140, https://github.com/rivm-syso/SBoo/issues/93 and https://github.com/rivm-syso/SBoo/issues/95 are fixed. Check: https://github.com/rivm-syso/SBoo/issues/138

--- a/vignettes/Development/Quality control/Publication/Molecular_verification_base.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_base.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Molecular verification - base"
-author: "Anne Hids"
+title: "Verification of SimpleBox - spreadsheet versus R implementation for base organic chemicals"
+author: "Anne Hids, Valerie de Rijk, Matthis Hof and Joris Quik"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
   markdown: 
     wrap: 72
 ---
@@ -17,16 +17,15 @@ options(dplyr.summarise.inform=FALSE)
 knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
-This vignette demonstrates the verification process of the molecular
-version of Simplebox for a substance of class 'base'.
-First, the k's are compared between R and excel,
-and consequently the steady state masses are compared. This is done for
-5 molecular substances; each of a different chemical class (no class,
-acid, base, neutral and metal). The reason that the verification is performed for 
-each of these classes is that some processes differ per class.
+This vignette demonstrates the verification process of SimpleBox
+implemented in R (version 2024.8.0) and in an Excel^TM^ spreadsheet (xl
+v4.0.5). To do this the 1^st^ order rate constants (k's) and steady
+state masses are compared between the two model implementations. The
+differences should be negligible and only based on rounding errors. In
+this case we choose a relative difference of the k's or masses between
+the models to not exceed 0.1%.
 
-First, the world needs to be initialized for a substance. In this case, that substance
-is 1-Hexadecanamine, N,N-dimethyl-, which is a base. 
+# Verification method
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 # Create a list with the names of substances
@@ -41,20 +40,49 @@ substance <- Potential_substances[3]
 
 source("baseScripts/initWorld_onlyMolec.R")
 ```
+The SBoo world is initialized for a substance. In this case, that
+substance is `r World$fetchData("Substance")`, which is of class:
+`r World$fetchData("ChemClass")`.
 
+At release already improvements or developments have been implemented in
+the R version of SimpleBox (SBoo) which are not implemented in Excel
+which will result in differences between the spreadsheet and R
+implementation. For this reason a TEST variable has been introduced to
+the changed algorithms in R in order to verify the outcome of SimpleBox
+in R with the original implementation in the spreadsheet version. So,
+TEST variable is a boolean, that can be used to calculate some processes
+in R the same way as in excel for the verification without removing the
+improvements that are made. For this reason we show the verification in
+two steps:
+
+1.  Compare k's and steady state masses of SBoo with updates to the
+    spreadsheet.
+
+2.  Compare k's and steady state masses of adapted SBoo using TEST
+    variable to the spreadsheet.
+
+When comparing k's and steady state masses between SimpleBox in R and
+Excel^TM^, the goal is that the relative difference is less than 0.1
+percent for each k and steady state mass. The reason is that smaller
+differences are almost inevitable due to differences in rounding values
+between excel and R, and not the result of mistakes in calculations or
+input values.
+
+# Step 1. Compare SBoo (incl. updates) to spreadsheet
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
 #Comparing K's from R model to K's from excel model
 library(openxlsx)
 library(tidyverse)
 
-ProcessMolFunctions <- c("k_Adsorption", "k_Advection", "k_Burial",
-                          "k_Degradation", "k_Deposition", "k_Desorption",
-                          "k_Erosion", "k_Escape", 
-                         "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation", 
-                         "k_Volatilisation")
+# ProcessMolFunctions <- c("k_Adsorption", "k_Advection", "k_Burial",
+#                           "k_Degradation", "k_Deposition", "k_Desorption",
+#                           "k_Erosion", "k_Escape", 
+#                          "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation", 
+#                          "k_Volatilisation")
 
 #read in K matrix from excel
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240723_",substance,".xlsm") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.05_20240816_",substance,".xlsm") 
+# SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240723_",substance,".xlsm") 
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -155,7 +183,7 @@ Diagonal k's are k's that are on the diagonal of the k matrix. They are calculat
 as the sum of all the k's leaving the subcompartment plus the sum of the removal process
 k's (i.e. degradation or burial). 
 
-```{r Plot diagonal differences, echo=FALSE, warning=FALSE}
+```{r PlotsDiagonalk_1,fig.cap = "Figure 1: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)", echo=FALSE, warning=FALSE}
 
 custom_theme <- function() {
   theme(
@@ -169,18 +197,18 @@ custom_theme <- function() {
 } 
 
 # Plot of differences of the diagonals per compartment
-ggplot(merged_diagonal, aes(x = from, y = diff)) +
-  geom_boxplot() +
-  ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
-  geom_hline(yintercept = 0.001, color = "red") +
-  geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
-  labs(x = "from", y = "Absolute diff")
+# ggplot(merged_diagonal, aes(x = from, y = diff)) +
+#   geom_boxplot() +
+#   ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
+#   geom_hline(yintercept = 0.001, color = "red") +
+#   geom_hline(yintercept = -0.001, color = "red") +
+#   custom_theme()+
+#   labs(x = "from", y = "Absolute diff")
 
 # Plot of relative differences of the diagonals per compartment
 ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 2: Relative differences removal k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
   custom_theme()+
@@ -191,7 +219,7 @@ Figures 1 and 2 above show the absolute and relative differences in diagonal k's
 As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake, river, sea, air and sediment subcompartments. 
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
-diagonal_diffs <- merged_diagonal |>
+ merged_diagonal |>
   mutate(reldif = abs(reldif)) |>
   filter(reldif > 0.001) |>
   arrange(desc(reldif))
@@ -206,21 +234,18 @@ the processes k_Sedimentation and k_Adsorption.
 
 #### Settling velocity
 
-The difference the diagonal k's going to sediment and river/sea water
-comes from a difference in k's for the 
+The difference in the diagonal k's for sedimentation comes from a difference in k's for the 
 sedimentation and resuspension processes. 
 
 This is caused by the use of different formulas to calculate settling
 velocity between excel and R. In excel, settling velocity is always calculated as: 
 
-$$ 
-SetVel <- 2.5/(24*3600)
-$$
+`SetVel <- 2.5/(24*3600)`
+
 While in R, an improved version of this formula is used: 
 
-$$ 
-SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)
-$$
+`SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)`
+
 Using the Test variable, the settling velocity formula is temporarily changed to 
 the formula used in excel for the resuspension ans sedimentation processes (K_resuspension
 and k_Sedimentation). This solves the differences in diagonal k's related to 
@@ -263,7 +288,7 @@ The Test variable was used to calculate this variable with the same FRorig value
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
   scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 4: Relative differences k's between R and excel for ", substance)) +
+  ggtitle(paste0( substance)) +
   theme(
     axis.text.y = element_text(size = 12),
     axis.text.x = element_text(angle = 45, hjust = 1, size = 12), 
@@ -273,10 +298,10 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
 
 
 ```{r kDifferences, include=FALSE, echo=FALSE}
-large_differences <- mergedkaas |>
+mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.001) |>
-  arrange(desc(relDif))
+  arrange(desc(relDif)) |> knitr::kable()
 ```
 
 #### Sedimentation and resuspension
@@ -434,7 +459,7 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 # Plot of relative differences of the diagonals per compartment
 ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 5: Relative differences removal k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
   custom_theme()+
@@ -462,7 +487,7 @@ from-to k's. All relative differences are now smaller than 1 percentile.
 ## Steadystate mass
 
 
-```{r comparison of steady state emissions using SB1Solve, include=TRUE, echo=FALSE, warning=FALSE}
+```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 
 library(stringi)
 
@@ -505,7 +530,7 @@ merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", "
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 7: Relative differences between steady state masses in excel and R (SB1solve) - ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme()
