--- a/vignettes/Development/Quality control/Publication/Molecular_verification_no_class.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_no_class.Rmd
@@ -228,7 +228,7 @@ in the lake and sediment subcompartments.
 diagonal_diffs <- merged_diagonal |>
   mutate(reldif = abs(reldif)) |>
   filter(reldif > 0.001) |>
-  arrange(desc(reldif))
+  arrange(desc(reldif))|> knitr::kable(digits = 30)
 ```
 
 #### Lake difference
@@ -310,7 +310,7 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
 large_differences <- mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.001) |>
-  arrange(desc(relDif))
+  arrange(desc(relDif))|> knitr::kable(digits = 30)
 ```
 
 #### Sedimentation and resuspension
